k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"maven-demo-app-war:latest","namespace":"demo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"maven-demo-app-war-app\")].image","pause":"false"}]
  name: maven-demo-app-war-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: maven-demo-app-war-app
      deploymentconfig: maven-demo-app-war-app
  template:
    metadata:
      labels:
        app: maven-demo-app-war-app
        deploymentconfig: maven-demo-app-war-app
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: maven-demo-app-war-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo/maven-demo-app-war:latest
          ports:
            - containerPort: 9443
              protocol: TCP
