k8s/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: maven-demo-app-war-app
  namespace: demo
  labels:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: maven-demo-app-war-app
  type: ClusterIP
  sessionAffinity: None
