k8s/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: maven-demo-app-war-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: maven-demo-app-war-app
    weight: 100
  port:
    targetPort: 9443-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
